# HW1_Applied_Deep_learning_ME405

./: LICENSE  README.md  Starter_of_hw1.ipynb  pyproject.toml  tf_keras_example.py  tf_tflite_example.py  torch_example.py
examples/: classes.txt  frame_export.yaml  tf_keras_example.py  tf_tflite_example.py  torch_example.py
src/mobile_gradio_classifier/: __init__.py  core.py  export_frames.py  video_utils.py
